  [ ] the type-dropdown box shall appear over the window - without this nasty scrolling
  [ ] The default-names of new objects shall be more unique, less duplicate name errors
  @gui+ctrl
  [ ] When undoing/redoing things, switch to a diagram where you see the changes
  @gui+pencil
  [ ] In new object mode, clicking into the space area shall create new features

  + Nicer layout: space area shall depend on the classifier type
2017-11-05 0.18.0 [2ac058e]
  + parent classifiers can contain children
2017-10-28 0.17.1 [c5ff71e]
  + fix for include paths on openSuSE Tumbleweed i586
2017-10-02 0.17.0 [fba4323]
  + Key control is possible: CTRL+C,V,X,Y,Z
  + Layout of relationships improved
  + Man page added
2017-09-11 0.16.2 [146b4e4]
  + bugfix: install uses less global paths for app icon
2017-09-10 0.16.1 [ce19eb3]
  + bugfix: desktop file is included in src distribution
2017-05-24 0.16 [ac34c09]
  + Classifier drawings represent the classifier type
2017-04-14 0.15 [69a0f6a]
  + Arrow, line and feather types of connectors are determined by relation type
  + A reset button clears the current selection
  + Relations are auto-layouted in a nicer way
2017-03-18 0.14 [097b793]
  + Classifiers are layouted avoiding overlaps
2017-02-25 0.13 [ff3b72f]
  + The txt-file export contains features and relationships
  + The user can export pdf and ps formats
  + The user is able to import features from the clipboard
  + The user is able to export relationships and features to the clipboard
2017-02-12 0.12 [7e37cf9]
  + Features can be created, modified, deleted (incl. undo/redo)
2017-02-05 0.11 [655350d]
  + Align objects vertically and horizontally (snap)
  + Edit new classifiers or relationships immediately
2017-01-28 0.10 [e93e7ec]
  + Relationships can be created, modified, deleted (incl. undo/redo)
  . DB format changed: features.key is not UNIQUE anymore (compatible change)
2016-12-22 0.09 [6d5cfac]
  + Mark and instantiate classifiers