@@ -132,6 +132,7 @@ static inline geometry_rectangle_t pencil_layouter_get_feature_bounds ( pencil_l
  *  \param this_ pointer to own object attributes
  *  \param x x-position
  *  \param y y-position
+ *  \param snap_distance maximum distance to the next connector line when to select the connector
  *  \param dereference true if the real, dereferenced object shall be returned (e.g. data_classifier_t or data_diagram_t),
  *                     false if the visible object shall be returned (e.g. data_diagramelement_t or data_diagram_t)
  *  \param out_selected_object_id the object id at the given location. The id is invalid if there is no object at the given location.
@@ -139,12 +140,13 @@ static inline geometry_rectangle_t pencil_layouter_get_feature_bounds ( pencil_l
  *  \return PENCIL_ERROR_OUT_OF_BOUNDS if the given position x, y is not in the diagram.
  */
 pencil_error_t pencil_layouter_get_object_id_at_pos ( pencil_layouter_t *this_,
-                                                 double x,
-                                                 double y,
-                                                 bool dereference,
-                                                 data_id_t *out_selected_object_id,
-                                                 data_id_t *out_surrounding_object_id
-                                               );
+                                                      double x,
+                                                      double y,
+                                                      double snap_distance,
+                                                      bool dereference,
+                                                      data_id_t *out_selected_object_id,
+                                                      data_id_t *out_surrounding_object_id
+                                                    );
 
 /*!
  *  \brief gets the classifier-id of the classifier at a given position
