@@ -19,6 +19,8 @@
   [ ] When undoing/redoing things, switch to a diagram where you see the changes
   @gui+pencil
   [ ] In new object mode, clicking into the space area shall create new features
+  @pencil
+  [ ] if grandparents contain parents and children, the children shall automatically be embraced by parent and grandparent
 
   + Nicer layout: space area shall depend on the classifier type
 2017-11-05 0.18.0 [2ac058e]
